fixed some spacing and image width issues, nav bar width fixed

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@
     background-color: #fff;
     width: 100%;
   }
+
+  img {
+      width: 100%;
+  }
   
   /* ========== Font import ========== */
 
@@ -214,7 +218,7 @@ header {
     top: calc(2.25rem);       /* aligns with header top */
     left: 50%;
     transform: translateX(-50%);
-    width: 90vw;              /* same width as navbar */
+    width: 95vw;              /* same width as navbar */
     height: var(--nav-blur-height); /* controlled by JS */
     background: rgba(250, 250, 250, 0.6);
     backdrop-filter: blur(6px);
@@ -227,7 +231,7 @@ header {
   
   .navbar {
     position: relative;
-    max-width: 90vw;
+    max-width: 95vw;
     margin: 0 auto;
     padding: 0.75rem 1.25rem;
     display: flex;
@@ -278,6 +282,7 @@ header {
   
   .logo-gif {
       height: 34px;
+      width: auto;
   }
 
 /* ========== Footer ========== */
@@ -452,7 +457,7 @@ footer {
   }
 
   .pt-l {
-      padding-top: clamp(1.25rem, calc(0.0829vw + 0.9392rem), 2rem);
+      padding-top: clamp(1.25rem, 2.22vw, 2rem);
   }
 
   
@@ -581,6 +586,14 @@ footer {
     /* when open, extend the blur background down */
     header.open::before {
       height: var(--nav-blur-height, 250px);
+    }
+
+    header::before {
+     max-width: 90vw;
+    }
+    
+    .navbar {
+        width: 90vw;
     }
 
 .case-study-content {
